0.1.8.dev0

 * Fixed handling of repeated spaces in source_directories which resulted in backup up everything.
 * Added support for --one-file-system for Borg.

0.1.7

 * #11: Fixed parsing of punctuation in configuration file.
 * Better error message when configuration file is missing.

0.1.6

 * #9: New configuration option for the encryption passphrase.
 * #10: Support for Borg's new archive compression feature.

0.1.5

 * Changes to support release on PyPI. Now pip installable by name!

0.1.4

 * Adding test that setup.py version matches release version.

0.1.3

 * #1: Add support for "borg check --last N" to Borg backend.

0.1.2

 * As a convenience to new users, allow a missing default excludes file.
 * New issue tracker, linked from documentation.

0.1.1

 * Adding borgmatic cron example, and updating documentation to refer to it.

0.1.0

 * New "borgmatic" command to support Borg backup software, a fork of Attic.

0.0.7

 * Flag for multiple levels of verbosity: some, and lots.
 * Improved mocking of Python builtins in unit tests.

0.0.6

 * New configuration section for customizing which Attic consistency checks run, if any.

0.0.5

 * Fixed regression with --verbose output being buffered. This means dropping the helpful error
   message introduced in 0.0.4.

0.0.4

 * Now using tox to run tests against multiple versions of Python in one go.
 * Helpful error message about how to create a repository if one is missing.
 * Troubleshooting section with steps to deal with broken pipes.
 * Nosetests config file (setup.cfg) with defaults.

0.0.3

 * After pruning, run attic's consistency checks on all archives.
 * Integration tests for argument parsing.
 * Documentation updates about repository encryption.

0.0.2

 * Configuration support for additional attic prune flags: keep_within, keep_hourly, keep_yearly,
   and prefix.

0.0.1

 * Initial release.