@@ -2,6 +2,7 @@
 
  * Fixed handling of repeated spaces in source_directories which resulted in backup up everything.
  * Added support for --one-file-system for Borg.
+ * Support borg create --umask.
 
 0.1.7
 
